--- a/SmartPortal/Views/Home/NewsDetail.cshtml
+++ b/SmartPortal/Views/Home/NewsDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.Article
+﻿@model SmartPortal.Models.Article
 @{
     ViewBag.Title = @Model.ArticleTitle;
     ViewBag.Keywords = @Model.Keywords;
