--- a/SmartPortal/Views/Home/ProductsDetail.cshtml
+++ b/SmartPortal/Views/Home/ProductsDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.Products
+﻿@model SmartPortal.Models.Products
 @{
     ViewBag.Title = @Model.ProductsName;
     ViewBag.Keywords = @Model.Keywords;
