--- a/SmartPortal/Areas/Admin/Views/Article/Add.cshtml
+++ b/SmartPortal/Areas/Admin/Views/Article/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.Article
+﻿@model SmartPortal.Models.Article
 @{
     ViewBag.Title = "添加文章";
 }
@@ -94,21 +94,21 @@
         <aside class="column width2">
 
             <!--快捷菜单-->
-            @Html.Partial("Custom/QuickMenu", new List<Models.Custom.QuickMenu>()
+            @Html.Partial("Custom/QuickMenu", new List<SmartPortal.Models.Custom.QuickMenu>()
        {
-           new Models.Custom.QuickMenu(){ 
+           new SmartPortal.Models.Custom.QuickMenu(){ 
                Icon="~/Content/admin/img/style.png", 
                Link="~/Article/Index",
                LinkText="文章列表", 
                Description="管理已发布的文章。"},
-           new Models.Custom.QuickMenu(){ 
+           new SmartPortal.Models.Custom.QuickMenu(){ 
                Icon="~/Content/admin/img/style.png", 
                Link="~/Article/Add",
                LinkText="添加文章", 
                Description="添加一篇文章。"}
        })
             <!--实用的提示信息-->
-            @Html.Partial("Custom/Tips", new Models.Custom.Tips()
+            @Html.Partial("Custom/Tips", new SmartPortal.Models.Custom.Tips()
        {
            Title = "提示信息",
            Content = "这里描述一段实用的便捷描述文字信息。",
