--- a/SmartPortal/Areas/Admin/Views/Article/Index.cshtml
+++ b/SmartPortal/Areas/Admin/Views/Article/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Models.Article>
+﻿@model IEnumerable<SmartPortal.Models.Article>
 @{
     ViewBag.Title = "文章管理";
 }
@@ -46,7 +46,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (Models.Article entity in Model)
+                    @foreach (SmartPortal.Models.Article entity in Model)
                     {
                         <tr>
                             <td>@entity.ArticleTitle
@@ -89,21 +89,21 @@
         <!-- 右边分部小节开始 -->
         <aside class="column width2">
             <!--快捷菜单-->
-            @Html.Partial("Custom/QuickMenu", new List<Models.Custom.QuickMenu>()
+            @Html.Partial("Custom/QuickMenu", new List<SmartPortal.Models.Custom.QuickMenu>()
        {
-           new Models.Custom.QuickMenu(){ 
+           new SmartPortal.Models.Custom.QuickMenu(){ 
                Icon="~/Content/img/style.png", 
                Link="~/Article/Index",
                LinkText="文章列表", 
                Description="管理已发布的文章。"},
-           new Models.Custom.QuickMenu(){ 
+           new SmartPortal.Models.Custom.QuickMenu(){ 
                Icon="~/Content/img/style.png", 
                Link="~/Article/Add",
                LinkText="添加文章", 
                Description="添加一篇文章。"}
        })
             <!--实用的提示信息-->
-            @Html.Partial("Custom/Tips", new Models.Custom.Tips()
+            @Html.Partial("Custom/Tips", new SmartPortal.Models.Custom.Tips()
        {
            Title = "提示信息",
            Content = "这里描述一段实用的便捷描述文字信息。",
